# olympus_mpc_demo

./: README.md
docs/: README.md  classes.html  classleg__system-members.html  classleg__system.html  classolympus__plant-members.html  classolympus__ros__interface-members.html  classolympus__state__demultiplexer-members.html  classolympus__state__demultiplexer.html  dir_27af907232bc6cb0581b5e9537da1cf8.html  dir_90f2e19a7d4d9f83ebee2c0a746c22be.html  dir_a1b918ead1a457c05ad068be04243593.html  dir_c53b97333177790bdc0658009fbd04ea.html  drake__helpers_8cpp_source.html  drake__helpers_8hpp.html  drake__helpers_8hpp_source.html  functions_func.html  globals_eval.html  globals_type.html  hierarchy.html  mainpage_8doc.html  md_README.html  olympus__drake_8hpp.html  olympus__drake__ros_8cpp_source.html  olympus__ros__sim_8cpp_source.html  structBushingParamsStruct-members.html  structBushingParamsStruct.html  structSpringParamsStruct-members.html  structSpringParamsStruct.html  structcontrollerGains-members.html  structdrake__ros__elements.html
docs/search/: all_0.js  all_11.js  all_12.js  all_13.js  all_4.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  classes_1.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_1.js  functions_3.js  functions_b.js  pages_0.js  searchdata.js  typedefs_1.js  variables_0.js  variables_12.js  variables_2.js  variables_3.js  variables_6.js  variables_8.js  variables_b.js  variables_d.js  variables_e.js
mpc_controller/: .gitignore  CMakeLists.txt  README.md  package.xml
mpc_controller/config/: controller_params.yaml  wbc_logging.perspective
olympus_ros_msgs/: CMakeLists.txt
olympus_ros_msgs/msg/: MotorStatus.msg  PIDState.msg  PIDStateArray.msg
olympus_ros_msgs/srv/: SetBoolArray.srv  TriggerArray.srv
olympus_simulation/: .gitignore  CMakeLists.txt  Doxyfile  README.md
olympus_simulation/doc/: mainpage.doc
olympus_simulation/doc/html/: README_8md.html  annotated.html  classolympus__plant.html  classolympus__ros__interface.html  dir_7e605e04028dbe1e869672cdc34a278f.html  dir_c7305be58241dc867286ce2241481a26.html  dir_de03f5705c4b0c7d0dffa8c233b430a9.html  dir_e68e8157741866f444e17edd764ebbae.html  drake__helpers_8cpp.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  index.html  mainpage.html  mainpage_source.html  menudata.js  olympus__drake_8cpp.html  olympus__drake_8cpp_source.html  olympus__drake_8hpp_source.html  olympus__drake__ros_8cpp.html  olympus__drake__ros_8hpp.html  olympus__drake__ros_8hpp_source.html  olympus__drake__sim_8cpp.html  olympus__drake__sim_8cpp_source.html  olympus__ros__sim_8cpp.html  pages.html  structcontrollerGains.html  structdrake__ros__elements-members.html  structstate__info__struct-members.html  structstate__info__struct.html
olympus_simulation/doc/html/search/: all_1.js  all_10.js  all_14.js  all_2.js  all_3.js  all_5.js  all_8.js  all_a.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  enumvalues_0.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  typedefs_0.js  variables_1.js  variables_10.js  variables_11.js  variables_5.js  variables_a.js  variables_c.js
olympus_simulation/olympus_drake/: CMakeLists.txt  Config.cmake.in  README.md  graph.dot
olympus_simulation/olympus_drake/config/: olympus_param.yaml  simulation_param.yaml
olympus_simulation/olympus_drake/include/: drake_helpers.hpp  olympus_drake.hpp
olympus_simulation/olympus_drake/scripts/: build_lib.sh  urdf_prepare.py
olympus_simulation/olympus_drake/src/: drake_helpers.cpp  olympus_drake.cpp  olympus_drake_sim.cpp
olympus_simulation/olympus_drake/urdf/: olympus_drake.urdf  testbed.urdf
olympus_simulation/olympus_drake_ros/: CMakeLists.txt  package.xml
olympus_simulation/olympus_drake_ros/config/: simulation_setup.yaml
olympus_simulation/olympus_drake_ros/include/olympus_drake_ros/: olympus_drake_ros.hpp
olympus_simulation/olympus_drake_ros/launch/: sim.launch
olympus_simulation/olympus_drake_ros/scripts/: deploy_sim.sh
olympus_simulation/olympus_drake_ros/src/: olympus_drake_ros.cpp  olympus_ros_sim.cpp
(+25 files in other folders)
